removed all hardcoded values